--- a/MainForm.lfm
+++ b/MainForm.lfm
@@ -11,8 +11,8 @@ object Form1: TForm1
   LCLVersion = '1.7'
   object TablesList: TMemo
     Left = 11
-    Height = 212
-    Top = 9
+    Height = 185
+    Top = 36
     Width = 181
     Lines.Strings = (
       'Accounts'
@@ -34,8 +34,8 @@ object Form1: TForm1
   end
   object ResultMemo: TMemo
     Left = 207
-    Height = 175
-    Top = 10
+    Height = 149
+    Top = 36
     Width = 342
     ScrollBars = ssAutoBoth
     TabOrder = 2
@@ -47,5 +47,21 @@ object Form1: TForm1
     Width = 191
     TabOrder = 3
     Text = 'd:\temp\data'
+  end
+  object DatabaseEdit: TEdit
+    Left = 81
+    Height = 23
+    Top = 7
+    Width = 468
+    TabOrder = 4
+    Text = 'd:\temp\data.fdb'
+  end
+  object Label1: TLabel
+    Left = 22
+    Height = 15
+    Top = 10
+    Width = 48
+    Caption = 'Database'
+    ParentColor = False
   end
 end
