--- a/MainForm.lfm
+++ b/MainForm.lfm
@@ -8,7 +8,7 @@ object Form1: TForm1
   ClientWidth = 564
   OnCreate = FormCreate
   OnKeyDown = FormKeyDown
-  LCLVersion = '1.7'
+  LCLVersion = '1.9.0.0'
   object TablesList: TMemo
     Left = 11
     Height = 185
@@ -52,7 +52,7 @@ object Form1: TForm1
     Left = 81
     Height = 23
     Top = 7
-    Width = 468
+    Width = 404
     TabOrder = 4
     Text = 'd:\temp\data.fdb'
   end
@@ -63,5 +63,21 @@ object Form1: TForm1
     Width = 48
     Caption = 'Database'
     ParentColor = False
+  end
+  object Button2: TButton
+    Left = 486
+    Height = 25
+    Top = 5
+    Width = 75
+    Caption = 'Browse'
+    OnClick = Button2Click
+    TabOrder = 5
+  end
+  object OpenDialog: TOpenDialog
+    DefaultExt = '.fdb'
+    FileName = '*.fdb'
+    Filter = '*.fdb'
+    left = 288
+    top = 133
   end
 end
